# hypertopos-mcp

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
docs/: mcp-spec.md  tools.md
src/hypertopos_mcp/: __init__.py  enrichment.py  main.py  serializers.py  server.py
src/hypertopos_mcp/tools/: __init__.py  _guards.py  aggregation.py  (+7 more)
tests/: conftest.py  test_agent_trust.py  test_aggregate_gbp_preslice.py  test_anomaly_dimensions.py  test_assess_anomaly_certainty.py  test_audit_label_alignment_mcp.py  test_audit_pattern_dims.py  test_calibration_drift_report.py  test_calibration_influencers_mcp.py  test_centroid_hint.py  test_chain_anchor_aggregations_mcp.py  test_chain_coherent_fallback_plan.py  test_chain_drift_trajectory_mcp.py  test_chain_full_loop_summary.py  test_chain_full_loop_summary_reliability_rollup.py  test_chain_witness_intersection_mcp.py  test_combine_anomaly_pvalues_mcp.py  test_consensus_classification.py  test_continuous_mode_note.py  test_dead_dims.py  test_decompose_drift_mcp.py  test_density_gaps_mcp.py  test_detection_tools.py  test_diverse_explanations_composer.py  test_drift_stale_warning.py  test_dynamic_tools.py  test_enrichment.py  test_extract_chains_error_contract.py  test_find_anomalies_signed_confidence.py  test_find_conformance_violations_mcp.py  test_find_diverse_explanations_mcp.py  test_guards_cap.py  test_hop_predicate_mcp.py  test_jump_polygon_continuous_mode.py  test_lead_lag_mcp.py  test_main_cli.py  test_motif_truncation.py  test_navigation_sanitize.py  test_pivot_labels.py  test_polygon_temporal_hint.py  (+11 more)
